i just made some changes in the scss style hero color and the cards flex style and the footer and the form in it and the last image

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <link rel="icon" href="img/TOH.png">
     </head>
     <body>
 
@@ -92,47 +93,51 @@
                     </div>
                 </div>
                 <div class="cardHolder">
-                    <div class="innerCardHolder">
-
-                        <div class="card" data-aos="fade-up">
-                            <div class="innerCardImg">
-                                <img src="img/card1.jpg" alt="smart watch">
+                    <div class="innerCardHolder" id="slick-holder-target">
+                        <div class="innerCardHolderLast">
+                                <div class="card" data-aos="fade-up">
+                                <div class="innerCardImg">
+                                    <img src="img/card1.jpg" alt="smart watch">
+                                </div>
+                                <div class="innerCardText" >
+                                    <h1>Heart rate monitoring⁷</h1>
+                                    <p>The TOH Watch continuously tracks your heart rate</p>
+                                </div>
                             </div>
-                            <div class="innerCardText" >
-                                <h1>Heart rate monitoring⁷</h1>
-                                <p>The TOH Watch continuously tracks your heart rate</p>
+
+                            <div class="card" data-aos="fade-up">
+                                <div class="innerCardImg">
+                                    <img src="img/card2.jpg" alt="smart watch">
+                                </div>
+                                <div class="innerCardText">
+                                    <h1>sleep tracking</h1>
+                                    <p>Each morning when you wake up, the TOH Watch tells you how long you've been in deep, light, or awake sleep the night before.</p>
+                                </div>                           
                             </div>
                         </div>
-
-                        <div class="card" data-aos="fade-up">
-                            <div class="innerCardImg">
-                                <img src="img/card2.jpg" alt="smart watch">
+                        
+                        <div class="innerCardHolderLast">
+                                <div class="card" data-aos="fade-up">
+                                <div class="innerCardImg">
+                                    <img src="img/card3.jpg" alt="smart watch">
+                                </div>
+                                <div class="innerCardText">
+                                    <h1>Guided breathing exercises</h1>
+                                    <p>Take the stress out of your day with breathing exercises that lead you to inner calm.</p>
+                                </div>                           
                             </div>
-                            <div class="innerCardText">
-                                <h1>sleep tracking</h1>
-                                <p>Each morning when you wake up, the TOH Watch tells you how long you've been in deep, light, or awake sleep the night before.</p>
-                            </div>                           
-                        </div>
 
-                        <div class="card" data-aos="fade-up">
-                            <div class="innerCardImg">
-                                <img src="img/card3.jpg" alt="smart watch">
-                            </div>
-                            <div class="innerCardText">
-                                <h1>Guided breathing exercises</h1>
-                                <p>Take the stress out of your day with breathing exercises that lead you to inner calm.</p>
-                            </div>                           
-                        </div>
-
-                        <div class="card" data-aos="fade-up">
-                            <div class="innerCardImg">
-                                <img src="img/card4.jpg" alt="smart watch">
-                            </div>
-                            <div class="innerCardText">
-                                <h1>wake-up alarm</h1>
-                                <p>When you have been sitting for too long, the TOH Watch reminds you to get up and walk for a few moments for your benefit.</p>
+                            <div class="card" data-aos="fade-up">
+                                <div class="innerCardImg">
+                                    <img src="img/card4.jpg" alt="smart watch">
+                                </div>
+                                <div class="innerCardText">
+                                    <h1>wake-up alarm</h1>
+                                    <p>When you have been sitting for too long, the TOH Watch reminds you to get up and walk for a few moments for your benefit.</p>
+                                </div>
                             </div>
                         </div>
+                        
                     </div>
                 </div>
             </div>
